# rivz_ws

./: README.md
devel/: .catkin  .rosinstall
devel/lib/pkgconfig/: joint_state_publisher.pc  lip_description.pc  urdf_model.pc  urdf_tutorial.pc  using_markers.pc
devel/lib/using_markers/: basic_shapes  points_and_lines
devel/share/joint_state_publisher/cmake/: joint_state_publisherConfig.cmake
devel/share/lip_description/cmake/: lip_descriptionConfig.cmake
devel/share/urdf_model/cmake/: urdf_modelConfig.cmake
devel/share/urdf_tutorial/cmake/: urdf_tutorialConfig.cmake
devel/share/using_markers/cmake/: using_markersConfig.cmake
src/lip_description/: CMakeLists.txt  package.xml
src/lip_description/launch/: spawn_urdf.launch
src/lip_description/urdf/: lip.urdf
src/urdf_model/: CMakeLists.txt  edupi.gv  package.xml
src/urdf_model/config/: drive.yaml  leftwheel.yaml  rightwheel.yaml
src/urdf_model/launch/: demoG.launch  display.launch  gazebo.launch  move.launch
src/urdf_model/rviz/: urdf.rviz
src/urdf_model/urdf/: alpha_bot.gv  base_bot.urdf  bot.urdf  demo.urdf
src/using_markers/: CMakeLists.txt  package.xml
